<?xml version="1.0"?>
<package>

  <name>gps_msgs</name>
  <version>0.0.1</version>
  <description>
    This package defines messages for relaying low-level signal information from
    GPS receivers as well as some outputs for specialized GPS-based algorithms
    such as DRTK.
  </description>
  <maintainer email="robertgcofield@gmail.com">Robert G. Cofield</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
  </export>

</package>